# validators/userValidator.js
@@ -13,7 +13,7 @@ const validateSignup = (userInfo) => {
 const validateSignin = (userInfo) => {
   const signinSchema = Joi.object({
     email: Joi.string().email().required(),
-    password: Joi.string().min(6).max(30).required(),
+    password: Joi.string().min(6).max(20).required(),
   });
   return signinSchema.validate(userInfo);
 };
